# ChangeLog for dev-libs/libev
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libev/ChangeLog,v 1.21 2009/12/14 18:44:37 ranger Exp $

  14 Dec 2009; Brent Baude <ranger@gentoo.org> libev-3.80-r1.ebuild:
  stable ppc64, bug 294609

  09 Dec 2009; nixnut <nixnut@gentoo.org> libev-3.80-r1.ebuild:
  ppc stable #294609

  26 Nov 2009; Markus Meier <maekke@gentoo.org> libev-3.80-r1.ebuild:
  amd64/x86 stable, bug #294609

  25 Nov 2009; MATSUU Takuto <matsuu@gentoo.org> -libev-3.53.ebuild,
  -libev-3.80.ebuild:
  Removed old versions.

*libev-3.80-r1 (03 Sep 2009)

  03 Sep 2009; MATSUU Takuto <matsuu@gentoo.org> +libev-3.80-r1.ebuild:
  Fixed dependency, bug #283558.

*libev-3.80 (19 Aug 2009)

  19 Aug 2009; MATSUU Takuto <matsuu@gentoo.org> +libev-3.80.ebuild:
  Version bumped.

*libev-3.70 (22 Jul 2009)

  22 Jul 2009; MATSUU Takuto <matsuu@gentoo.org> -libev-3.49.ebuild,
  -libev-3.51.ebuild, +libev-3.70.ebuild:
  Version bumped. Removed old versions.

*libev-3.53 (20 Feb 2009)

  20 Feb 2009; MATSUU Takuto <matsuu@gentoo.org> libev-3.48.ebuild,
  libev-3.49.ebuild, libev-3.51.ebuild, +libev-3.53.ebuild:
  Version bumped. Fixed SRC_URI, bug #259435.

*libev-3.51 (01 Jan 2009)

  01 Jan 2009; MATSUU Takuto <matsuu@gentoo.org> -libev-3.43.ebuild,
  +libev-3.51.ebuild:
  Version bumped. Removed old version.

  20 Dec 2008; nixnut <nixnut@gentoo.org> libev-3.48.ebuild:
  Stable on ppc wrt bug 250793

  17 Dec 2008; Markus Meier <maekke@gentoo.org> libev-3.48.ebuild:
  x86 stable, bug #250793

  16 Dec 2008; Brent Baude <ranger@gentoo.org> libev-3.48.ebuild:
  stable ppc64, bug 250793

  14 Dec 2008; Thomas Anderson <gentoofan23@gentoo.org> libev-3.48.ebuild:
  stable amd64, bug 250793

*libev-3.49 (13 Dec 2008)

  13 Dec 2008; MATSUU Takuto <matsuu@gentoo.org> +libev-3.49.ebuild:
  Version bumped.

*libev-3.48 (13 Nov 2008)

  13 Nov 2008; MATSUU Takuto <matsuu@gentoo.org> -libev-3.42-r1.ebuild,